--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nightclazz",
   "version": "1.0.0",
-  "description": "Preparation for the Nightclaz",
+  "description": "Preparation for the Nightclazz",
   "author": "Franck & Gregory",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
